Writing most of the events.

--- a/src/templatefiles/templates/dnd/concrete/obstacles/01-born-again/00-leaving-heaven-or-hell.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/01-born-again/00-leaving-heaven-or-hell.html
@@ -24,18 +24,18 @@
 
     <p>Day 1</p>
     <ul>
-        <li>Awaken on the <a href="dnd/places/big-ant-island/beach-center.html">beach</a></li>
         <li>Suffer reborn conditions</li>
         <li>The whole day a strong wind (see conditions)</li>
+        <li>Awaken on the <a href="/dnd/places/big-ant-island/beach-center.html">beach</a></li>
     </ul>
 {% endblock %}
 
 {% block locations %}
-    <p>Takes place on <a href="dnd/places/big-ant-island/">Big Ant Island</a></p>
+    <p>Takes place on <a href="/dnd/places/big-ant-island/">Big Ant Island</a></p>
 {% endblock %}
 
 {% block achievements %}
-    <p>When evening falls continue with <a href="01-formian-first-contact.html">Formian first contact</a>.</p>
+    <p>When they find Hanuman's letter proceed to <a href="01-finding-a-letter.html">finding a letter</a></p>
 {% endblock %}
 
 {% block creatures %}
