--- a/src/templatefiles/templates/dnd/concrete/obstacles/01-born-again/01-finding-a-letter.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/01-born-again/01-finding-a-letter.html
@@ -12,7 +12,7 @@
 {% endblock %}
 
 {% block achievements %}
-    <p>no achievements</p>
+    <p>When evening falls continue with <a href="02-formian-first-contact.html">Formian first contact</a>.</p>
 {% endblock %}
 
 {% block creatures %}
