--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/abandoned-village.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/abandoned-village.html
@@ -5,7 +5,6 @@
 
 {% block events %}
     <p>When you enter one of the houses you immediately notice a skeleton lifeless on the ground, wearing ragged clothing.</p>
-    <p>When walking through the area you notice a butterfly sucking the life out of another butterfly.</p>
 {% endblock %}
 
 {% block locations %}
@@ -74,6 +73,13 @@
         <dd>
             20 >= Find food (fruits) and water (rain water) that is certainly not poisonous.
                   Find food and water for another for every two points above 20.
+        </dd>
+    </dl>
+
+    <dl class="dc">
+        <dt>SurvivalDC: (tracks)</dt>
+        <dd>
+            20 >= Tracks move up the headlands where they are very hard to follow.
         </dd>
     </dl>
 {% endblock %}
