--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/beach-center.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/beach-center.html
@@ -65,7 +65,7 @@
     </dl>
     <dl class="dc">
         <dt>KnowledgeNatureDC: (Formians)</dt>
-        <dd> 10 >= Formians are monstrous humanoids that are half ant, half human, which live in big colonies led by powerful mystical queens.</dd>
+        <dd> 10 >= Formians are monstrous humanoids that are half ant, half human, which live in big colonies led by powerful mystical queens through the hive mind</dd>
         <dd> 15 >= Details about Workers and Warriors</dd>
         <dd> 20 >= Details about Taskmasters and Myrmarchs</dd>
         <dd> 25 >= Details about Queens</dd>
@@ -77,11 +77,11 @@
     <ul>
         <li>A letter</li>
     </ul>
-    <p>There are also these Talos relics in the bag</p>
+    <p>There are also these black with gold artifacts in the bag.</p>
     <ul>
-        <li>Twin swords of deconstruction</li>
-        <li>Runestaff of shadow</li>
-        <li>Fur of the shadow pack</li>
+        <li>Two rapiers</li>
+        <li>A quiver</li>
+        <li>A staff</li>
     </ul>
 {% endblock %}
 
