--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/vulcano-ring.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/vulcano-ring.html
@@ -12,27 +12,16 @@
         Evil has a firmer grip in this area (reroll taints)
     </p>
     <p>
-        Walking on either side of the water you are suddenly confronted by a Myrmarch called Hosan. He acts a bit creepy.
-        If party does not cooperate he will force them to do his work or die trying.
-    </p>
-    <ul>
-        <li>How they got here?</li>
-        <li>What are the adventurers up to?</li>
-        <li>Do you know what "the light" did to our Queen?</li>
-        <li>He can heal some wounds.</li>
-        <li>He can fix the boat.</li>
-        <li>He wants a task master dead.</li>
-        <li>
-            Why? That taskmaster is under control of Fihni and he wants another taskmaster close to the light.
-            One that he controls.
-        </li>
-        <li>His advice is to go in during the day and circumvent the patrols or enter during the night through level-1.</li>
-    </ul>
+
+
 {% endblock %}
 
 {% block locations %}
 
-    <p>This area consist of a number of sub area's.</p>
+    <p>
+        This area consist of a number of sub area's.
+        Everywhere they keep on finding mutilated Formians.
+    </p>
     <ul>
         <li>There is a lake in the middle of the vulcano with a small waterfall in the east.</li>
         <li>In the north and the south there is jungle with moderate undergrowth</li>
