Add enlightenment and another religion based change.

--- a/src/templatefiles/templates/dnd/concrete/obstacles/00-prologue/00-events-so-far.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/00-prologue/00-events-so-far.html
@@ -50,6 +50,7 @@
         How much is Olivet himself responsible for the criminal activities?
     </li>
     <li>Talos is an evil God, why would the book talk about freeing people from anything instead of simply fearing people into belief</li>
+    <li>Apparently one cleric could believe to serve a God he didn't. Are there more clerics? What other games do the Gods play?</li>
     <li>There are many oppressing situations in the world, why send down an avatar for this particular situation</li>
     <li>What happened to Lokahmee and how does he feel about his tower being destroyed?</li>
 </ol>
