--- a/src/templatefiles/templates/dnd/concrete/obstacles/template.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/template.html
@@ -1,7 +1,7 @@
 {% extends "dnd/abstract/obstacle.html" %}
 
-{% block title %}Enlightenment{% endblock %}
-{% block summary %}Adventurers learn about Talos, Hanuman and the relics.{% endblock %}
+{% block title %}No Title{% endblock %}
+{% block summary %}No summary{% endblock %}
 
 {% block events %}
     <p>no events</p>
@@ -12,7 +12,7 @@
 {% endblock %}
 
 {% block achievements %}
-    <p>Proceed with <a href="../02-escape-big-ant-island/01-fixing-the-boat.html">escape big ant island</a>.</p>
+    <p>no achievements</p>
 {% endblock %}
 
 {% block creatures %}
@@ -36,5 +36,5 @@
 {% endblock %}
 
 {% block misc %}
-    <p>Handout 05-All-Enlightenment.odt</p>
+    <p>no misc</p>
 {% endblock %}
