--- a/src/templatefiles/templates/dnd/concrete/obstacles/02-escape-big-ant-island/05-the-church-of-Talos.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/02-escape-big-ant-island/05-the-church-of-Talos.html
@@ -11,6 +11,6 @@
     <li>On the altar a violent ceremony is taking place to honour Talos</li>
     <li>The cleric recognizes the adventurers as figures from the prophecy</li>
     <li>Everybody drops to their knees in worship</li>
-    <li>All wounds are taken care off</li>
+    <li>All wounds and taint is taken care off</li>
 </ol>
 {% endblock %}
