Make some small changes to order of events.

--- a/src/templatefiles/templates/dnd/concrete/obstacles/02-escape-big-ant-island/02-lifting-the-boat-in-the-water.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/02-escape-big-ant-island/02-lifting-the-boat-in-the-water.html
@@ -28,7 +28,7 @@
 {% endblock %}
 
 {% block achievements %}
-    <p>When escaped or victorios tell about travel on the ocean. Proceed with <a href="03-shark-attack.html">shark attack</a>.</p>
+    <p>When escaped or victorious proceed with <a href="03-shark-attack.html">shark attack</a>.</p>
 {% endblock %}
 
 {% block creatures %}
