--- a/src/templatefiles/templates/dnd/concrete/obstacles/02-escape-big-ant-island/03-shark-attack.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/02-escape-big-ant-island/03-shark-attack.html
@@ -4,7 +4,8 @@
 {% block summary %}A shark discovers the boat and tries to attack.{% endblock %}
 
 {% block events %}
-    <p>There are a series of events</p>
+    <p>tell about travel on the ocean. When evening start to fall there are a series of events.</p>
+    <p></p>
     <ol>
         <li>Party see the fin the the distance.</li>
         <li>Shark approaches bumping into the boat to see what is is.</li>
