--- a/src/templatefiles/templates/dnd/concrete/obstacles/02-escape-big-ant-island/04-the-church-of-Valkur.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/02-escape-big-ant-island/04-the-church-of-Valkur.html
@@ -7,7 +7,7 @@
 
 {% block events %}
     <p>
-        Adventurers suddenly see a slowly flickering light in the distance.
+        As the it grows darker adventurers suddenly see a slowly flickering light in the distance.
         A lighthouse! And very well possibly a church of Valkur.
     </p>
     <p>
