Update initial equipment.

--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/beach-right.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/beach-right.html
@@ -92,8 +92,8 @@
         <li>A gold & black statue of a half-man half-monkey holding a flower.</li>
         <li>A black and gold book called Book of Annihilation. (see misc)</li>
         <li>Faerun Magic Shop Manual.</li>
-        <li>A familiar book (spell book Kadunkle).</li>
-        <li>Inside the spell book you find some scrolls (transmute rock to mud, charm monster, swim, clairaudience/clairvoyance, veil, knock).</li>
+        <li>Three familiar books (spell book Kadunkle).</li>
+        <li>Inside the spell book you find a bit of fleece.</li>
         <li>One vial with a potion is standing next to the statue (potion of restoration)</li>
         <li>A silk rope</li>
         <li>As well as a sealed pot (full with sugar)</li>
