Balance equipment a bit more.

--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/abandoned-village.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/abandoned-village.html
@@ -89,7 +89,7 @@
     <ul>
         <li>Masterwork shortspear (blunt): boat, SearchDC10</li>
         <li>
-            Locked chest with 1xCSW + 3 platinum: cracked wall of a house, SearchDC20.
+            Locked chest with 1xCSW + 3 platinum + periapt of wisdom: cracked wall of a house, SearchDC20.
             BreakDC10 (breaks the vial), OpenDC15.
         </li>
         <li>Masterwork dagger (blunt): near the fireplace, SearchDC15</li>
