--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/hive-0.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/hive-0.html
@@ -95,12 +95,12 @@
 {% block items %}
     <p>In each of the storages something can be found. Roll to determine what.</p>
     <ol>
-        <li>2x CMW</li>
-        <li>1x Masterwork small sword</li>
-        <li>6x Peasant clothing (medium size)</li>
+        <li>2x Explorers clothing (medium size), 2x CMW</li>
+        <li>2x Explorers clothing (medium size), 2x CMW, 1x Small sword +1</li>
+        <li>2x CMW, 1x Clerics vestments,  Light steal shield +3</li>
         <li>1x Headband of Intellect</li>
-        <li>1x Masterwork studded leather</li>
-        <li>1x Periapt of Wisdom</li>
+        <li>1x Chain shirt +3</li>
+        <li>1x Monks outfit, 1x Gloves of Dex</li>
     </ol>
 {% endblock %}
 
