Updating session one a bit.

--- a/src/templatefiles/templates/dnd/concrete/obstacles/00-prologue/02-kadunkle-comes-to-visit.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/00-prologue/02-kadunkle-comes-to-visit.html
@@ -1,6 +1,6 @@
 {% extends "dnd/abstract/obstacle.html" %}
 
-{% block title %}Kadunkle comes to visit{% endblock %}
+{% block title %}Kadunkle & Pomin come to visit.{% endblock %}
 {% block summary %}Kadunkle introduces the quest.{% endblock %}
 
 {% block misc %}
@@ -9,13 +9,14 @@
 
 {% block events %}
 <ol>
-    <li>Message that Kadunkle will be arriving</li>
-    <li>Kadunkle arrives</li>
+    <li>Kadunkle introduces his colleague and friend Pomin.</li>
+    <li>After catching up they discuss business over dinner.</li>
+    <li>A few weeks of rest are needed (level up)</li>
 </ol>
 {% endblock %}
 
 {% block achievements %}
-<p>Party goes to sleep. Proceed to <a href="02-killed-in-the-night.html">killed in the night</a></p>
+<p>After level up. Proceed to <a href="03-a-hungry-rat.html">a hungry Rat</a></p>
 {% endblock %}
 
 {% block locations %}
