--- a/src/templatefiles/templates/dnd/concrete/obstacles/01-born-again/00-leaving-heaven-or-hell.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/01-born-again/00-leaving-heaven-or-hell.html
@@ -17,21 +17,24 @@
 
     <p>
         Your last memory is that you went to sleep in a warm bed.
-        Now you wake up completely naked in a strong but warm wind.
+        Now you wake up completely naked in a strong chilly wind.
+        with your eyes closed.
         You lie in fine yellow sand and can hear waves pounding hard on the shore.
-        As you turn your head you see your comrades lying not far from you.
     </p>
+
+    <p>Explain conditions</p>
+
+    <p>As you turn your head you see your comrades lying not far from you.</p>
 
     <p>Day 1</p>
     <ul>
-        <li>Suffer reborn conditions</li>
         <li>The whole day a strong wind (see conditions)</li>
-        <li>Awaken on the <a href="/dnd/places/big-ant-island/beach-center.html">beach</a></li>
+        <li>Awaken on the <a href="../../places/big-ant-island/beach-center.html">beach</a></li>
     </ul>
 {% endblock %}
 
 {% block locations %}
-    <p>Takes place on <a href="/dnd/places/big-ant-island/">Big Ant Island</a></p>
+    <p>Takes place on <a href="../../places/big-ant-island/">Big Ant Island</a></p>
 {% endblock %}
 
 {% block achievements %}
