--- a/src/templatefiles/templates/dnd/concrete/obstacles/01-born-again/02-formian-first-contact.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/01-born-again/02-formian-first-contact.html
@@ -29,7 +29,7 @@
 {% endblock %}
 
 {% block locations %}
-    <p>no locations</p>
+    <p>Takes place on <a href="../../places/big-ant-island/">Big Ant Island</a></p>
 {% endblock %}
 
 {% block achievements %}
