--- a/src/templatefiles/templates/dnd/concrete/obstacles/02-escape-big-ant-island/02-lifting-the-boat-in-the-water.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/02-escape-big-ant-island/02-lifting-the-boat-in-the-water.html
@@ -8,12 +8,12 @@
         As soon as the party gets the boat out of the jungle on the beach a Myrmarch teleports in with 4 workers.
         There are four scenarios:
     </p>
-    <ol>
-        Hosan is helping = Fihni teleports in from a distance. Accuses Hosan of treason. He proves he's not a traitor by attacking as well.
-        Hosan is not helping = He teleports in saying he will have to prove to Fihni he was not helping you.
-        Hosan is dead, party killed/stole = Fihni was searching for killers/thiefs and found them
-        Hosan is dead, party didn't do anything = Fihni teleports in asking questions, leaves
-    </ol>
+    <ul>
+        <li>Hosan is helping = Fihni teleports in from a distance. Accuses Hosan of treason. He proves he's not a traitor by attacking as well.</li>
+        <li>Hosan is not helping = He teleports in saying he will have to prove to Fihni he was not helping you.</li>
+        <li>Hosan is dead, party killed/stole = Fihni was searching for killers/thiefs and found them</li>
+        <li>Hosan is dead, party didn't do anything = Fihni teleports in asking questions, leaves</li>
+    </ul>
     <p>Some facts to consider during combat.</p>
     <ul>
         <li>Beach is around 30m wide.</li>
