--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/beach-center.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/beach-center.html
@@ -37,7 +37,7 @@
 
 {% block achievements %}
     <ul>
-        <li>When finding the letter from Hanuman it should be read out to them.</li>
+        <li>When they find Hanuman's letter proceed to <a href="01-finding-a-letter.html">finding a letter</a></li>
         <li>Find Talos relics</li>
     </ul>
 {% endblock %}
