--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/inland-right.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/inland-right.html
@@ -29,7 +29,7 @@
     </p>
     <ul>
         <li><a href="the-tree.html">Forward</a></li>
-        <li><a href="beach-center.html">Back</a></li>
+        <li><a href="beach-right.html">Back</a></li>
         <li><a href="inland-center.html">Left</a></li>
         <li>
             Right leads to intense dense growth and a huge rock wall that is impossible to climb with all vegetation.
