--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/vulcano-ring.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/vulcano-ring.html
@@ -9,9 +9,9 @@
         Carefully you peak over the edge.
         You see a dead Formian worker lying on the ground.
         On closer examination it turns out that the body is sucked dry of blood and left to rot in the sun.
-        Evil has a firmer grip in this area (reroll taints)
+        Evil has a firmer grip in this area (<a href="overview.html">reroll taints</a>)
     </p>
-    <p>
+    <p>When discovered by Formians these <a href="../../obstacles/01-born-again/04-towards-the-light.html">events take place</a></p>
 
 
 {% endblock %}
