--- a/src/templatefiles/templates/dnd/concrete/obstacles/01-born-again/01-finding-a-letter.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/01-born-again/01-finding-a-letter.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block locations %}
-    <p>no locations</p>
+    <p>Takes place on <a href="../../places/big-ant-island/">Big Ant Island</a></p>
 {% endblock %}
 
 {% block achievements %}
