Update Yauhnn to facilitate entrance.

--- a/src/templatefiles/templates/dnd/concrete/obstacles/02-escape-big-ant-island/03-shark-attack.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/02-escape-big-ant-island/03-shark-attack.html
@@ -16,7 +16,7 @@
 {% endblock %}
 
 {% block locations %}
-    <p>no locations</p>
+    <p>Takes place on <a href="../../places/big-ant-island/sea.html">sea</a></p>
 {% endblock %}
 
 {% block achievements %}
@@ -33,7 +33,7 @@
 {% endblock %}
 
 {% block conditions %}
-    <p>no conditions</p>
+    <p><a href="http://dndsrd.net/wildernessAndEnvironment.html#aquatic">Water environment</a></p>
 {% endblock %}
 
 {% block knowledges %}
