--- a/src/templatefiles/templates/dnd/concrete/obstacles/02-escape-big-ant-island/04-the-church-of-Valkur.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/02-escape-big-ant-island/04-the-church-of-Valkur.html
@@ -11,40 +11,23 @@
         A lighthouse! And very well possibly a church of Valkur.
     </p>
     <p>
-        Depending on whether they were helped by <a href="../../characters/Sjahnsesh+shark-hunter.html">Sjahnsesh</a>
-        or not they have to decide.
-        Whether to go to the bright harbor with their red eyes or sneak into darker area's where that lead to the lighthouse.
-        Getting on land in the darker area is of course going to be harder.
-        Sjahnsesh will lead them safely on land in the darker area.
+        They have to get there from <a href="../../places/Yauhnn/sea.html">the sea</a>.
+        These are their options:
     </p>
+    <ul>
+        <li>When they were helped <a href="../../characters/Sjahnsesh+shark-hunter.html">Sjahnsesh</a> will lead them to
+        <a href="../../places/Yauhnn/slums-district/fisher-boats.html">fishers boats</a> (evade guards)</li>
+        <li>Go to bright <a href="../../places/Yauhnn/trade-district/harbor">harbor</a> with their condition.</li>
+        <li>Try to go for <a href="../../places/Yauhnn/slums-district/breakers-slums.html">darker area</a></li>
+    </ul>
+
     <p>
-        Assuming they will choose the safe route. The adventurers end up in the poor area of a city. It smells bad.
-        Because it is night no one is on the streets. Working their way towards the lighthouse that is standing on the cliff.
-        They encounter a pool of water. The water is completely black, but can't be that deep.
-        The cliff is full of caves where people have set up some kind of shelter to live in.
-        There are stairs carved into the rock that lead up to the lighthouse.
-    </p>
-    <p>
-        When entering the lighthouse no one is there on the ground floor. It seems to be a space of prayer.
-        There is a stair leading to a hatch which is closed. When they knock on it a sleepy cleric opens.
+        When they get to <a href="../../places/Yauhnn/slums-district/church-of-Valkur.html">the church </a> knocking on the hatch a a sleepy cleric opens.
         He is startled by their appearance. Scared, but will realize that party isn't doing anything.
         Once inside the cleric is trying to help, but can't really.
         He is hesitant to say that he knows somebody who can.
-        You can go to a secret door behind the altar. It leads into a cave passage. When you move away the curtain you walk unto another alter.
-        However here the church is full.
-</p>
+    </p>
+
+    <p> You can go to a secret door behind the altar. It leads into a cave passage. When you move away the curtain you walk unto another alter.
+        However here the church is full.</p>
 {% endblock %}
-
-{% block conditions %}
-    <dl class="dc">
-        <dt>ClimbDC:</dt>
-        <dd> 15 >= You manage to get from the water onto <a href="../../places/Yauhnn/slums-district/breakers-slums.html">the breakers</a></dd>
-    </dl>
-{% endblock %}
-
-
-
-{% block misc %}
-
-{% endblock %}
-
