--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/overview.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/overview.html
@@ -4,7 +4,7 @@
 
     <h3>Yauhnn</h3>
 
-    <p>A city in <a href="dnd/places/Sembia.html"></a></p>
+    <p>A city in <a href="../../places/Sembia.html"></a></p>
 
 
 {% endblock %}
