--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/sea.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/sea.html
@@ -8,7 +8,10 @@
 {% endblock %}
 
 {% block locations %}
-    <p>no locations</p>
+    <p>When on the sea around Yauhnn. There are a few ways to get to mainland</p>
+    <ul>
+        <li><a href="slums-district/breakers-slums.html">breaker slums</a> most obvious, but toughest area to get to land.</li>
+    </ul>
 {% endblock %}
 
 {% block achievements %}
@@ -16,11 +19,19 @@
 {% endblock %}
 
 {% block creatures %}
-    <p>Far from the coast there might be a <a href="http://dndsrd.net/monstersDitoDo.html#dire-shark">shark</a></p>
+    <p>no creatures</p>
 {% endblock %}
 
 {% block traps %}
-    <p>no traps</p>
+    <p>Breaker slums entry</p>
+    <dl class="dc">
+        <dt>ClimbDC:</dt>
+        <dd>15 >= climb on rocks from the water.</dd>
+    </dl>
+    <dl class="dc">
+        <dt>ReflexDC:</dt>
+        <dd>15 >= Hold onto rocks when boat smashes on the rocks</dd>
+    </dl>
 {% endblock %}
 
 {% block conditions %}
