--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/fisher-boats.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/fisher-boats.html
@@ -3,6 +3,10 @@
 {% block todo %}{% endblock %}
 
 {% block locations %}
+    <p><b>
+        Nobody is living in this area. There are just a lot of boats and fishing nets everywhere. It smells like rotten fish.
+    </b></p>
+
     <p>Places of interest in this area</p>
     <ul>
         <li>Shark stand (Locathah captain)</li>
