--- a/src/templatefiles/templates/dnd/concrete/obstacles/02-escape-big-ant-island/01-fixing-the-boat.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/02-escape-big-ant-island/01-fixing-the-boat.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block locations %}
-    <p>no locations</p>
+    <p>Takes place on <a href="../../places/big-ant-island/">Big Ant Island</a></p>
 {% endblock %}
 
 {% block achievements %}
