--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/breakers-slums.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/breakers-slums.html
@@ -14,6 +14,11 @@
 {% endblock %}
 
 {% block locations %}
+    <p><b>
+        The houses here are nothing but a few wooden planks holding some fleece as a roof. Most houses do not even have a door.
+        It would probably smell terrible if the wind wasn't blowing so hard around here.
+    </b></p>
+
     <p>Landmarks</p>
     <ul>
         <li>In the middle of the area there is a big pool. Children are playing there during the day (see events)</li>
