--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/the-tree.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/the-tree.html
@@ -21,7 +21,7 @@
 
     <p>From here there are a few places to go.</p>
     <ul>
-        <li>Go up the 200m high waterfall (4xClimbDC 15) to <a href="vulcano-ring.html">top</a></li>
+        <li>Go up the 200m high waterfall (4xClimbDC 15/20) to <a href="vulcano-ring.html">top</a></li>
         <li>Follow to waterfall stream to <a href="abandoned-village.html">the left</a></li>
         <li>Go into the jungle <a href="inland-center.html">across the tree</a></li>
         <li>Go into the jungle <a href="inland-right.html">on the right side</a></li>
