--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/beach-right.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/beach-right.html
@@ -1,7 +1,7 @@
 {% extends "dnd/abstract/place.html" %}
 
 {% block title %}Beach, right{% endblock %}
-{% block summary %}Place to stack up on gear and find the book of annihilation.{% endblock %}
+{% block summary %}Place find the book of annihilation.{% endblock %}
 
 {% block events %}
     <p>As the adventures get closer to the statue the red eyed Girallons grow restless</p>
@@ -80,13 +80,7 @@
 {% endblock %}
 
 {% block items %}
-    <p>On the beach, some belongings of a dead ranger.</p>
-    <ul>
-        <li>Bow +1 speed</li>
-        <li>20 arrows + 5 force arrows</li>
-        <li>Studded leather +2</li>
-        <li>1x CSW</li>
-    </ul>
+
     <p>In the rock of the headland there is a burrow. Inside that burrow stands the following.</p>
     <ul>
         <li>A gold & black statue of a half-man half-monkey holding a flower.</li>
