--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/the-tree.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/the-tree.html
@@ -16,7 +16,8 @@
         As you enter the area you see a huge ancient tree under the waterfall.
         Its roots curl around the rocks and go into the small pond.
         On the roots on the rocks grow beautiful big flowers.
-        The flowers are completely open and are inviting to sit down in for a short break.
+        Most flowers are completely open and are inviting to sit down in for a short break.
+        One flower is closed.
     </p>
 
     <p>From here there are a few places to go.</p>
@@ -68,6 +69,13 @@
 
 {% block items %}
     <p>Inside the pond lies a ring of protection +2 from a pink tree victim. SearchDC20</p>
+    <p>In the flower lies the body of a dead ranger.</p>
+    <ul>
+        <li>Bow +1 speed</li>
+        <li>25 arrows + 5 force arrows</li>
+        <li>Studded leather +2</li>
+        <li>1x CSW</li>
+    </ul>
 {% endblock %}
 
 {% block misc %}
