Update breakers-slums to be more clear.

--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/breakers-slums.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/breakers-slums.html
@@ -8,8 +8,9 @@
     <ul>
         <li>
             Children come running towards them, follow them everywhere.
-            They want to swim with the adventures and play tag.
+            They want to swim with the adventurers and play tag.
         </li>
+        <li>Mothers gather around the pool, watching their children.</li>
     </ul>
 {% endblock %}
 
@@ -24,7 +25,7 @@
         <li>In the middle of the area there is a big pool. Children are playing there during the day (see events)</li>
         <li>
             There is one shack next to big pool where children are constantly crying.
-            Inside there are children with
+            Inside there are children with wounded hands.
         </li>
     </ul>
     <p>Neighbooring area's</p>
