Follow up on the story.

--- a/src/templatefiles/templates/dnd/concrete/characters/Janala+talos-oracle.html
+++ b/src/templatefiles/templates/dnd/concrete/characters/Janala+talos-oracle.html
@@ -1,7 +1,5 @@
 {% extends "dnd/abstract/character.html" %}
 
-{% block todo %}Story, motive{% endblock %}
-
 {% block name %}Janala{% endblock %}
 {% block summary %}
     Cleric, Oracle for Talos. Wants to see the prophecy come true.
@@ -28,6 +26,10 @@
         It may result in the performance of The Fury
     </p>
 
+{% endblock %}
+
+{% block image %}
+    <p>Complete Arcane page 76</p>
 {% endblock %}
 
 {% block stats %}
