--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/church-of-Valkur.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/church-of-Valkur.html
@@ -1,5 +1,22 @@
 {% extends "dnd/abstract/place.html" %}
 
+{% block title %}Church of Valkur{% endblock %}
+{% block summary %}Lighthouse that acts as a church for sailors.{% endblock %}
+
+{% block events %}
+    <p>
+        When knocking on the hatch to first floor a sleepy cleric opens.
+        He is startled by their appearance. Scared, but will realize that party isn't doing anything.
+        Once inside the cleric is trying to help, but can't really.
+        He is hesitant to say that he knows somebody who can.
+    </p>
+    <p>
+        You can go to a secret door behind the altar. It leads into a cave passage.
+        When you move away the curtain at the end of the passage you walk unto another alter.
+        However here the <a href="church-of-Talos.html">church</a> is full.
+    </p>
+{% endblock %}
+
 {% block locations %}
     <p>The lighthouse/church consists of</p>
     <ul>
@@ -10,7 +27,7 @@
 
     <p>From here:</p>
     <ul>
-        <li>Secret door behind alter to <a href="church-of-Talos.html">church of Talos</a></li>
+        <li>Secret door (SearchDC 25) behind alter to <a href="church-of-Talos.html">church of Talos</a></li>
         <li>Stairs down the cliff to <a href="cave-slums.html">cave slums</a></li>
     </ul>
 {% endblock %}
