Adjusting Sjanshesh a bit.

--- a/src/templatefiles/templates/dnd/concrete/characters/Sjahnsesh+shark-hunter.html
+++ b/src/templatefiles/templates/dnd/concrete/characters/Sjahnsesh+shark-hunter.html
@@ -6,15 +6,15 @@
     A rather skilled ranger, but no match for the party. Willing to help as devotee to Talos.
 {% endblock %}
 
-{% block story %}No story{% endblock %}
+{% block story %}A Locathah hunting for sharks his whole life. Fed up with being a second rank civilian.{% endblock %}
 {% block motivation %}
     <ul>
-        <li>Wants to help the party</li>
-        <li>Is often incapable to help</li>
+        <li>Wants to help the party as long as they are against the nobles</li>
+        <li>Will not take it well if party turns away from the poor life</li>
     </ul>
 {% endblock %}
 {% block image %}
-    <p><img src="{% static "pics/mehsan.jpg" %}" alt="mehsan"/></p>
+    <p><img src="{% static "pics/sjhansesh.jpg" %}" alt="sjhansesh"/></p>
 {% endblock %}
 
-{% block stats %}5th level <a href="http://dndsrd.net/cleric.html">cleric</a>{% endblock %}
+{% block stats %}9th level <a href="http://dndsrd.net/ranger.html">ranger</a>{% endblock %}
