Various updates for the harbor and surrounding area.

--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/church-of-Talos.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/church-of-Talos.html
@@ -1,7 +1,7 @@
 {% extends "dnd/abstract/place.html" %}
 
-{% block title %}No title{% endblock %}
-{% block summary %}No summary{% endblock %}
+{% block title %}Church of Talos{% endblock %}
+{% block summary %}Secret church in Yauhnn for the God of Destruction.{% endblock %}
 
 {% block events %}
     <p>When entering for the first time (through church of Valkur</p>
@@ -21,7 +21,10 @@
 {% endblock %}
 
 {% block achievements %}
-    <p>no achievements</p>
+    <p>
+        When entering first time proceed with
+        <a href="../../../obstacles/03-poor-life-in-Yauhnn/00-exploring-the-city.html">exploring the city</a>
+    </p>
 {% endblock %}
 
 {% block creatures %}
