--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/church-of-Waukeen.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/church-of-Waukeen.html
@@ -4,6 +4,7 @@
 {% block summary %}No summary{% endblock %}
 
 {% block events %}
+    <p>At night there are guards at the top of the stairs who check people walking up.</p>
     <p>
         Walking up the stairs an <a href="../../../obstacles/03-poor-life-in-Yauhnn/assasination-attempt.html">assassination attempt</a>
         takes place.
@@ -25,7 +26,7 @@
         <li>That weighing square on city ground level is the entry to the <a href="harbor/">harbor</a></li>
         <li>On the north side the weighing square leads to <a href="../slums-district/harbor-slums.html">harbor slums</a></li>
         <li>On the south sides weighing square leads to <a href="../noble-district/wannabe-nobles.html">wannabe nobles</a></li>
-        <li>The church lies in front of and is entry to <a href="big-market.html">the big market</a> on 1st city level</li>
+        <li>The church lies in front of and is entry to <a href="big-market">the big market</a> on 1st city level</li>
     </ul>
 
     <p>Inside</p>
