Updating market and Talos church.

--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/church-of-Talos.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/church-of-Talos.html
@@ -7,9 +7,8 @@
     <p>When entering for the first time (through church of Valkur</p>
     <ol>
         <li>Adventures enter through curtains to a bigger cave.</li>
-        <li>The cave is decorated as a temple of Talos.</li>
-        <li>Many Locathah and half Locathah are facing the higher part of the cave that party is on.</li>
-        <li>That part serves as altar where now two half-Locathah are in a bloody fist fight.</li>
+        <li>Two half-Locathah are in a bloody fist fight right in front of their noses.</li>
+        <li>Many Locathah and half Locathah are watching the fight</li>
         <li><a href="../../../characters/Janala+talos-oracle.html">A female cleric</a> also stands on the altar and recognizes the adventurers as figures from the prophecy</li>
         <li>Everybody drops to their knees in worship</li>
         <li>All wounds and taint is taken care off by <a href="../../../characters/Janala+talos-oracle.html">Janala</a></li>
@@ -17,7 +16,17 @@
 {% endblock %}
 
 {% block locations %}
-    <p>no locations</p>
+    <p><b>
+        This big cave is full of decorations hinting at Talos.
+        On one side there is a slight elevation in the rocks.
+        This is used as an altar to the God of Destruction.
+    </b></p>
+
+    <p>From here adventurers can go to:</p>
+    <ul>
+        <li>The stairs behind the curtains on the alter leading to <a href="church-of-Valkur.html">church of Valkur</a></li>
+        <li>A small pathway in the back of the cave leads to <a href="slums-market.html">slums market</a></li>
+    </ul>
 {% endblock %}
 
 {% block achievements %}
