--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/slums-market.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/slums-market.html
@@ -3,8 +3,6 @@
 {% block title %}Cave Market{% endblock %}
 {% block summary %}The cave market is a central meeting place for the humans and Locathah living in the slums as secondary citizens{% endblock %}
 
-{% block todo %}Knowledges, conditions{% endblock %}
-
 {% block locations %}
     <p>Places of interest in this area</p>
     <ol>
@@ -17,7 +15,7 @@
     </ol>
     <p>Neighbooring area's</p>
     <ul>
-        <li>A shrine with secret entrance to <a href="church-of-Talos.html">church of Talos</a></li>
+        <li>A tucked away shrine with secret entrance (SearchDC25) to <a href="church-of-Talos.html">church of Talos</a></li>
         <li>In the back of brewery a stinking passage (FortDC12: nauseated, see BreathDC) to <a href="cave-slums.html">cave slums</a></li>
         <li>Towards the light, outside to <a href="fisher-boats.html">fisher boats</a></li>
     </ul>
@@ -32,28 +30,28 @@
 
 {% block creatures %}
 
-    <h4><a href="/dnd/characters/Mirika+insane-half-elf.html">Mirika</a> - insane half-elf girl</h4>
+    <h4><a href="../../../characters/Mirika+insane-half-elf.html">Mirika</a> - insane half-elf girl</h4>
     <p>Roll random on locations to determine whereabouts.</p>
     <dl class="dc">
         <dt>WisdomDC:</dt>
-        <dd> >= 17 wears insignia of Lokahmee</dd>
-        <dd> >= 12 insignia look familiar</dd>
+        <dd> 17 >= wears insignia of Lokahmee</dd>
+        <dd> 12 >= insignia look familiar</dd>
     </dl>
     <dl class="dc">
        <dt>KnowledgeLocalDC:</dt>
-       <dd> >= 14 Clothing seem noble elven from Dalelands</dd>
+       <dd> 14 >= Clothing seem noble elven from Dalelands</dd>
     </dl>
 
-    <h4><a href="/dnd/characters/Sorakesh+blacksmith.html">Sorakesh</a> - blacksmith (Talos devotee)</h4>
+    <h4><a href="../../../characters/Sorakesh+blacksmith.html">Sorakesh</a> - blacksmith (Talos devotee)</h4>
     <p>A strong guy who makes more than fishing spears as a hobby</p>
 
-    <h4><a href="/dnd/characters/Nimry+sea-weed-lady.html">Nimry</a> - sea weed lady</h4>
+    <h4><a href="../../../characters/Nimry+sea-weed-lady.html">Nimry</a> - sea weed lady</h4>
     <p>
         An old woman schooled in the powers of sea weeds.
         Can help with sleeping problems and has quest to defeat Aboleth
     </p>
 
-    <h4><a href="/dnd/characters/Thekesh-Moltabar.html">Thekesh</a> - the brewery owner</h4>
+    <h4><a href="../../../characters/Thekesh-Moltabar.html">Thekesh</a> - the brewery owner</h4>
     <p>
         He ownes the brewery, but also a fish stand on the food market as his alter ego Moltabar.
         He secretly smuggles goods past Waukeen church.
@@ -91,7 +89,7 @@
     </p>
     <ul>
         <li>Breath: stand to breath the sea air at <a href="breakers-slums.html">breaker slums</a> for an hour</li>
-        <li>Eat: eat a fish prepared by <a href="/dnd/characters/Otalan+delicious-fish-merchant.html">Otalan</a>.</li>
+        <li>Eat: eat a fish prepared by <a href="../../../characters/Otalan+delicious-fish-merchant.html">Otalan</a>.</li>
         <li>Drink: get drunk in master brewery at <a href="../trade-district/the-gildes.html">the gildes</a>.</li>
         <li>
             Sex: Visit brothel at
@@ -107,12 +105,12 @@
 {% block knowledges %}
     <dl class="dc">
         <dt>GatherInformationDC: (drunk bonus -4)</dt>
-        <dd> >= 6 The men drinking are complaining about the little they earn with fish</dd>
+        <dd> 6 >= The men drinking are complaining about the little they earn with fish</dd>
         <dd>
-            >= 10 The men say that it is all <a href="/dnd/characters/Thekesh-Moltabar.html">Moltabar's</a>
-            fault and that they wish they worked for <a href="/dnd/characters/Otalan.html"></a>
+            10 >= The men say that it is all <a href="../../../characters/Thekesh-Moltabar.html">Moltabar's</a>
+            fault and that they wish they worked for <a href="../../../characters/Otalan+delicious-fish-merchant.html">Otalan</a>
         </dd>
-        <dd> >= 14 The men drinking earn some money on the side at night</dd>
+        <dd> 14 >= The men drinking earn some money on the side at night</dd>
     </dl>
 {% endblock %}
 
